# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yml
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
