[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Caleb Kelley <calebakelley@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
reqwest = "0.11"
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4.22"
tracing = { version = "0.1", features = ["log"]}
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-actix-web = "0.6"
secrecy = { version = "0.8", features = ["serde"] }

[dev-dependencies]
once_cell = "1"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
